[package]
name = "explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
walkdir = "2.4.0"
